# zip-browser

./: README.md  build_exe.py  cli_entry.py  create_icon.py  install.sh  main.py  manage_users.py  pyproject.toml  setup-unix.sh  setup.ps1  test_urls.txt
src/: __init__.py  app.py  archive_handler.py  auth.py  cache_manager.py  config.py  ffmpeg_utils.py  main.py  routes.py  user_cli.py  user_manager.py  utils.py  zip_manager.py
src/archive_handlers/: __init__.py  base.py  filesystem_handler.py  gz_handler.py  link_parser.py  rar_handler.py  remote_zip_handler.py  sevenz_handler.py  tar_handler.py  torrent_handler.py  url_handler.py  zip_handler.py
src/routes/: __init__.py  auth.py  browse.py  search.py  video.py
src/static/: styles.css
src/templates/: base.html  index.html  login.html  search_results.html  zip_list.html  zip_unlock.html
tests/: conftest.py  test_archive_handler.py  test_auth.py  test_cli.py  test_config.py  test_e2e_live.py  test_live_server.py  test_nested_archive.py  test_open_with.py  test_routes.py  test_url_handler.py  test_user_manager.py  test_utils.py  test_video_pipeline.py  test_video_timing.py  test_zip_manager.py
